--- a/public/manifest.json
+++ b/public/manifest.json
@@ -34,5 +34,6 @@
   ],
   "start_url": "index.html",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "background_color": "#242424"
 }
